<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/backround"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            tools:layout_editor_absoluteX="-34dp"
            tools:layout_editor_absoluteY="-76dp" />

        <ImageView
            android:id="@+id/ic_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="186dp"
            android:layout_marginLeft="132dp"
            android:layout_marginRight="132dp"
            android:src="@drawable/ic_photo"
            android:contentDescription="photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <EditText
            android:id="@+id/name"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="353dp"
            android:padding="7.12dp"
            android:hint="@string/name"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/palindrome"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="415dp"
            android:padding="7.12dp"
            android:hint="@string/palindrome"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/check"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="507dp"
            android:text="@string/check"
            app:circularflow_radiusInDP="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nex"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="563dp"
            android:text="@string/nex"
            app:circularflow_radiusInDP="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>